--- a/Exerc8.html
+++ b/Exerc8.html
@@ -14,7 +14,7 @@
         }
         .Item {
             background-color: rgb(131, 127, 255);
-            border: solid 1px rebeccapurple;
+            border: solid 1px rgb(39, 22, 100);
         }
     </style>
 
